# Test_C

test_1/: CMakeLists.txt  main.cpp  nstr.cpp  nstr.h
test_2/: CMakeLists.txt  main.cpp  strcheck.cpp  strcheck.h
